# Poneglyph

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  build.ps1  collect.bat  run-all.bat
libesedb-patches/: fix-ws2025-itag-state.patch  zzz-fix-ws2025-btree.patch
src/: acl.rs  bootkey.rs  collect.rs  crypto.rs  ese.rs  lib.rs  links.rs  main.rs  mcp.rs  schema.rs
src/forensics/: anomaly.rs  mod.rs  tombstone.rs
src/objects/: computer.rs  gpo.rs  group.rs  mod.rs  trust.rs  user.rs
src/output/: bloodhound.rs  csv.rs  graph.rs  hashcat.rs  mod.rs
tests/: unit_tests.rs
